==> jimsecond1/uCNC/uCNC/src/hal/mcus/lpc176x/mcu_lpc176x.c <==
#include "../../../cnc.h"
#include "system_LPC17xx.h"
#include <tusb_ucnc.h>
#define SERVO_MIN 64

void MCU_RTC_ISR(void)
{
	mcu_disable_global_isr();
	_millis++;
	mcu_rtc_cb((uint32_t)_millis);
	mcu_enable_global_isr();
}

void MCU_ITP_ISR(void)
{
	mcu_disable_global_isr();

	if (CHECKBIT(ITP_TIMER_REG->IR, TIM_MR1_INT))
	{
		mcu_step_reset_cb();
		SETBIT(ITP_TIMER_REG->IR, TIM_MR1_INT);
	}

	if (CHECKBIT(ITP_TIMER_REG->IR, TIM_MR0_INT))
	{
		mcu_step_cb();
		SETBIT(ITP_TIMER_REG->IR, TIM_MR0_INT);
	}

	mcu_enable_global_isr();
}

void mcu_init(void)
{
	mcu_clocks_init();

	lpc_global_isr_enabled = false;

	mcu_io_init();
	mcu_usart_init();
	// SysTick is started by the framework but is not working
	// Using timer
	mcu_rtc_init();
#if SERVOS_MASK > 0
	servo_timer_init();
#endif
#ifdef MCU_HAS_SPI
	mcu_config_af(SPI_CLK, SPI_ALT_FUNC);
	mcu_config_af(SPI_SDO, SPI_ALT_FUNC);
	mcu_config_af(SPI_SDI, SPI_ALT_FUNC);
	mcu_config_af(SPI_CS, SPI_ALT_FUNC);
	LPC_SC->PCONP |= SPI_PCONP;
	LPC_SC->SPI_PCLKSEL_REG &= ~SPI_PCLKSEL_MASK; // div clock by 4
	uint8_t div = SPI_COUNTER_DIV(SPI_FREQ);
	div += (div & 0x01) ? 1 : 0;
	SPI_REG->CPSR = div;		   // internal divider
	SPI_REG->CR0 |= SPI_MODE << 6; // clock phase
	SPI_REG->CR0 |= 7 << 0;		   // 8 bits
	SPI_REG->CR1 |= 1 << 1;		   // enable SSP*/

#endif
#ifdef MCU_HAS_I2C
	mcu_i2c_config(I2C_FREQ);
#endif

	mcu_disable_probe_isr();
	mcu_enable_global_isr();
}

void mcu_start_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	uint32_t val = (uint32_t)ticks;
	val <<= prescaller;
	LPC_SC->PCONP |= ITP_PCONP;
	LPC_SC->ITP_PCLKSEL_REG &= ~ITP_PCLKSEL_VAL; // system clk/4

	ITP_TIMER_REG->CTCR = 0;
	ITP_TIMER_REG->CCR &= ~0x03;
	ITP_TIMER_REG->TC = 0;
	ITP_TIMER_REG->PC = 0;
	ITP_TIMER_REG->PR = 0;
	ITP_TIMER_REG->TCR |= TIM_RESET;  // Reset Counter
	ITP_TIMER_REG->TCR &= ~TIM_RESET; // release reset
	ITP_TIMER_REG->EMR = 0;

	ITP_TIMER_REG->PR = ((F_CPU >> 2) / 1000000UL) - 1; // for 1us
	ITP_TIMER_REG->IR = 0xFFFFFFFF;

	ITP_TIMER_REG->MR1 = val >> 1;
	ITP_TIMER_REG->MR0 = val;
	ITP_TIMER_REG->MCR = 0x0B; // Interrupt on MC0 and MC1 and reset on MC0

	NVIC_SetPriority(ITP_TIMER_IRQ, 1);
	NVIC_ClearPendingIRQ(ITP_TIMER_IRQ);
	NVIC_EnableIRQ(ITP_TIMER_IRQ);

	// TIM_Cmd(ITP_TIMER_REG, ENABLE);
	ITP_TIMER_REG->TCR |= TIM_ENABLE;
}

void mcu_change_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	uint32_t val = (uint32_t)ticks;
	val <<= prescaller;
	ITP_TIMER_REG->TCR &= ~TIM_ENABLE;
	ITP_TIMER_REG->MR1 = val >> 1;
	ITP_TIMER_REG->MR0 = val;
	ITP_TIMER_REG->TCR |= TIM_RESET;
	ITP_TIMER_REG->TCR &= ~TIM_RESET;
	ITP_TIMER_REG->TCR |= TIM_ENABLE;
}

void mcu_stop_itp_isr(void)
{
	ITP_TIMER_REG->TCR &= ~TIM_ENABLE;
	ITP_TIMER_REG->TCR |= TIM_RESET;
	ITP_TIMER_REG->TCR &= ~TIM_RESET;
	NVIC_DisableIRQ(ITP_TIMER_IRQ);
}

void mcu_config_timeout(mcu_timeout_delgate fp, uint32_t timeout)
{
	mcu_timeout_cb = fp;
	LPC_SC->PCONP |= ONESHOT_PCONP;
	LPC_SC->ONESHOT_PCLKSEL_REG &= ~ONESHOT_PCLKSEL_VAL; // system clk/4

	ONESHOT_TIMER_REG->CTCR = 0;
	ONESHOT_TIMER_REG->CCR &= ~0x03;
	ONESHOT_TIMER_REG->TC = 0;
	ONESHOT_TIMER_REG->PC = 0;
	ONESHOT_TIMER_REG->PR = 0;
	ONESHOT_TIMER_REG->TCR |= TIM_RESET;  // Reset Counter
	ONESHOT_TIMER_REG->TCR &= ~TIM_RESET; // release reset
	ONESHOT_TIMER_REG->EMR = 0;

	ONESHOT_TIMER_REG->PR = ((F_CPU >> 2) / 1000000UL) - 1; // for 1us
	ONESHOT_TIMER_REG->IR = 0xFFFFFFFF;

	ONESHOT_TIMER_REG->MR0 = timeout;
	ONESHOT_TIMER_REG->MCR = 0x07; // Interrupt reset and stop on MC0

	NVIC_SetPriority(ONESHOT_TIMER_IRQ, 3);
	NVIC_ClearPendingIRQ(ONESHOT_TIMER_IRQ);
	NVIC_EnableIRQ(ONESHOT_TIMER_IRQ);

	// TIM_Cmd(ONESHOT_TIMER_REG, ENABLE);
	// ONESHOT_TIMER_REG->TCR |= TIM_ENABLE;
}
