==> jimsecond1/uCNC/uCNC/src/hal/mcus/rp2040/mcu_rp2040.c <==
#include "../../../cnc.h"
#include <string.h>
#include <stdbool.h>
#include <stdint.h>

void mcu_rtc_isr(void)
{
	// enqueue alarm again
	mcu_enqueue_alarm(&rtc_alarm, 1000UL);

	// counts to 20 and reloads
#if SERVOS_MASK > 0
	static uint8_t ms_servo_counter = 0;
	uint8_t servo_counter = ms_servo_counter;

	switch (servo_counter)
	{
#if ASSERT_PIN(SERVO0)
	case SERVO0_FRAME:
		servo_start_timeout(mcu_servos[0]);
		io_set_output(SERVO0);
		break;
#endif
#if ASSERT_PIN(SERVO1)
	case SERVO1_FRAME:
		io_set_output(SERVO1);
		servo_start_timeout(mcu_servos[1]);
		break;
#endif
#if ASSERT_PIN(SERVO2)
	case SERVO2_FRAME:
		io_set_output(SERVO2);
		servo_start_timeout(mcu_servos[2]);
		break;
#endif
#if ASSERT_PIN(SERVO3)
	case SERVO3_FRAME:
		io_set_output(SERVO3);
		servo_start_timeout(mcu_servos[3]);
		break;
#endif
#if ASSERT_PIN(SERVO4)
	case SERVO4_FRAME:
		io_set_output(SERVO4);
		servo_start_timeout(mcu_servos[4]);
		break;
#endif
#if ASSERT_PIN(SERVO5)
	case SERVO5_FRAME:
		io_set_output(SERVO5);
		servo_start_timeout(mcu_servos[5]);
		break;
#endif
	}

	servo_counter++;
	ms_servo_counter = (servo_counter != 20) ? servo_counter : 0;

#endif
	__ATOMIC__
	{
		mcu_rtc_cb(millis());
	}
}

void mcu_init(void)
{
	mcu_io_init();
	mcu_usart_init();

	pinMode(LED_BUILTIN, OUTPUT);
	// init rtc, oneshot and servo alarms
	mcu_alarms_init();
	rtc_alarm.alarm_cb = &mcu_rtc_isr;
	mcu_enqueue_alarm(&rtc_alarm, 500000UL);

#if SERVOS_MASK > 0
	servo_alarm.alarm_cb = &mcu_clear_servos;
#endif

#ifndef RAM_ONLY_SETTINGS
	rp2040_eeprom_init(1024); // 1K Emulated EEPROM
#endif
#ifdef MCU_HAS_SPI
	mcu_spi_config(SPI_FREQ, SPI_MODE);
#endif

#ifdef MCU_HAS_I2C
	mcu_i2c_config(I2C_FREQ);
#endif

#ifdef MCU_HAS_ONESHOT
	// // Set irq handler for alarm irq
	// irq_set_exclusive_handler(ONESHOT_IRQ, mcu_oneshot_isr);
	// // Enable the alarm irq
	// irq_set_enabled(ITP_TIMER_IRQ, true);
#endif
}

static void mcu_itp_isr(void)
{
	__ATOMIC__
	{
		static bool resetstep = false;

		// Clear the alarm irq
		hw_clear_bits(&timer_hw->intr, (1U << ITP_TIMER));
		uint32_t target = (uint32_t)timer_hw->timerawl + mcu_step_reload;
		timer_hw->alarm[ITP_TIMER] = target;

		if (!resetstep)
		{
			mcu_step_cb();
		}

		else
		{
			mcu_step_reset_cb();
		}

		resetstep = !resetstep;
	}
}

void mcu_start_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	hw_set_bits(&timer_hw->inte, 1u << ITP_TIMER);
	// Set irq handler for alarm irq
	irq_set_exclusive_handler(ITP_TIMER_IRQ, mcu_itp_isr);
	// Enable the alarm irq
	irq_set_enabled(ITP_TIMER_IRQ, true);
	// Enable interrupt in block and at processor

	// Alarm is only 32 bits so if trying to delay more
	// than that need to be careful and keep track of the upper
	// bits
	uint32_t target = (((uint32_t)ticks) << prescaller);
	mcu_step_reload = target;

	target += (uint32_t)timer_hw->timerawl;

	// Write the lower 32 bits of the target time to the alarm which
	// will arm it
	timer_hw->alarm[ITP_TIMER] = target;
}

void mcu_change_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	uint32_t target = (((uint32_t)ticks) << prescaller);
	mcu_step_reload = target;

	target += (uint32_t)timer_hw->timerawl;

	// Write the lower 32 bits of the target time to the alarm which
	// will arm it
	timer_hw->alarm[ITP_TIMER] = target;
}

void mcu_stop_itp_isr(void)
{
	irq_set_enabled(ITP_TIMER_IRQ, false);
	hw_clear_bits(&timer_hw->inte, 1u << ITP_TIMER);
}

void mcu_config_timeout(mcu_timeout_delgate fp, uint32_t timeout)
{
	// mcu_timeout_cb = fp;
	oneshot_alarm.alarm_cb = &mcu_oneshot_isr;
	rp2040_oneshot_reload = (1000000UL / timeout);
	mcu_timeout_cb = fp;
}
